--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <!--  Login Screen  -->
     <string name="login_screen_login">Iniciar sesión</string>
     <string name="login_screen_error">Error al inicio de sesión</string>
+    <string name="login_screen_email_not_verified">Tu correo electrónico no está verificado</string>
+
 
     <!--  Register Screen  -->
     <string name="register_screen_title">Registro</string>
@@ -25,6 +27,11 @@
     <string name="register_screen_repeat_password">Repetir contraseña</string>
     <string name="register_screen_error_firebase"> Registro fallido</string>
     <string name="register_screen_successfully_register"> Usuario registrado exitosamente</string>
+    <string name="register_screen_verification_email_sent"> Email verificación enviado</string>
+    <string name="register_screen_verification_email_failed"> Email verificación fallido</string>
+
+
+    verification_email_sent
 
 
     <!--  Exercises Screen  -->
